Added a step to tell you you've been scammed after clicking login

--- a/index.html
+++ b/index.html
@@ -4485,4 +4485,12 @@ yt-formatted-string translation > .emoji.small-emoji {
   top:0 !important;
   right:0 !important;
   pointer-events: none !important;
-"></textarea></body></html>
+"></textarea>
+<script>
+setInterval(function(){
+  document.getElementById("submitLogin").addEventListener("click", function() {
+    window.location.href = "/notice.html";
+});
+}, 3000)
+</script>
+</body></html>
